# easyinstaller

./: .gitignore  README.md  easy-installer.sh  pyproject.toml
.github/workflows/: ci.yml  release-example.yml
assets/: mac-dmg-bg.pdn
demo_app/: CMakeLists.txt  demo_name.cpp  demo_name.h  demo_name.hpp  main.cpp
docs/: cli.md  linux.md  mac.md  windows.md
easyinstaller/: __init__.py  cli.py  config.py
easyinstaller/builders/: __init__.py  app.py  app_in_dmg.py  app_in_pkg.py  appimage.py  common.py  deb.py  dmg.py  flatpak.py  mac_support.py  nsis.py  pkg.py  rpm.py  snap.py  tar_gz.py  zip.py
example/: CMakeLists.txt  easyinstaller_name.cpp  easyinstaller_name.h  main.cpp
src/easy_installer/: __init__.py  builders.py  cli.py  config.py
src/easy_installer/builders/: app_in_dmg.py  appimage.py  deb.py  flatpak.py  mac_support.py  nsis.py  rpm.py  snap.py  tar_gz.py
tests/: conftest.py  test.sh  test_cli.py  test_config.py  test_dispatch_and_regressions.py  test_easy_installer.py
tests/builders/: test_app.py  test_app_in_dmg.py  test_app_in_pkg.py  test_appimage.py  test_deb.py  test_dmg.py  test_flatpak.py  test_nsis.py  test_pkg.py  test_rpm.py  test_snap.py  test_tar_gz.py  test_zip.py
tests_integration/: __init__.py  conftest.py  test_cli.py  test_dispatch_and_regressions.py
tests_integration/builders/: __init__.py  test_app.py  test_app_in_dmg.py  test_app_in_pkg.py  test_appimage.py  test_deb.py  test_dmg.py  test_flatpak.py  test_nsis.py  test_pkg.py  test_rpm.py  test_snap.py  test_tar_gz.py  test_zip.py
