[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "easyinstaller"
version = "1.0.0"
description = "Create installers and archives from a release folder for any target OS."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
easyinstaller = "easy_installer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
