[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "easyinstaller"
version = "0.4.0"
description = "Create installers and archives from a release folder for any target OS."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
easyinstaller = "easyinstaller.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["easyinstaller*"]

[tool.setuptools.package-data]
easyinstaller = ["builders/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_integration"]
markers = [
	"integration: tests that build real artifacts and may require host-specific tooling",
]
